--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "os-daemon",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Use CouchDBs os_daemons with node.",
   "main": "index.js",
   "scripts": {
@@ -24,5 +24,6 @@
     "tap": "~0.4.6"
   },
   "dependencies": {
+    "event-stream": "~3.0.20"
   }
 }
