--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "couch-daemon",
-  "version": "1.2.1",
+  "name": "couch-daemon-bridge",
+  "version": "1.2.2",
   "description": "Use CouchDBs os_daemons with node.",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jo/couch-daemon"
+    "url": "https://github.com/jo/couch-daemon-bridge"
   },
   "keywords": [
     "couchdb",
@@ -18,9 +18,9 @@
   "author": "Johannes J. Schmidt",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jo/couch-daemon/issues"
+    "url": "https://github.com/jo/couch-daemon-bridge/issues"
   },
-  "homepage": "https://github.com/jo/couch-daemon",
+  "homepage": "https://github.com/jo/couch-daemon-bridge",
   "devDependencies": {
     "tap": "~0.4.6",
     "jshint": "~2.3.0"
