--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "couch-daemon-bridge",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Use CouchDBs os_daemons with node.",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,7 @@
     "jshint": "~2.3.0"
   },
   "dependencies": {
-    "event-stream": "~3.0.20",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "highland": "^1.25.1"
   }
 }
