--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "couch-daemon-bridge",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Use CouchDBs os_daemons with node.",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/jo/couch-daemon-bridge",
   "devDependencies": {
     "tap": "~0.4.6",
-    "jshint": "~2.3.0"
+    "jshint": "~2.3.0",
+    "event-stream": "^3.1.5"
   },
   "dependencies": {
     "async": "~0.2.9",
